syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";

package dev.toothpick.proto.dstream;

option (scalapb.options) = {
  no_default_values_in_constructor: true
  import: "dev.chopsticks.kvdb.codec.protobuf_value.ProtobufMappers._"
  import: "dev.toothpick.proto.ProtoMappers._"
  preserve_unknown_fields: false
};

service TpDstream {
  rpc Run (stream TpWorkerReport) returns (stream TpWorkerDistribution) {
  }
}

message TpWorkerReport {
  google.protobuf.Timestamp time = 1 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
  TpWorkerEvent event = 2;
}

message TpWorkerEvent {
  oneof sealed_value {
    TpWorkerStarted started = 2;
    TpWorkerProgress progress = 3;
    TpWorkerResult result = 4;
    TpWorkerException exception = 5;
  }
}

message TpWorkerStarted {}
message TpWorkerException {
  string message = 1;
}

message TpWorkerProgress {
  int32 log_line_count = 1;
}

message TpWorkerResult {
  int32 exit_code = 1;
}

message TpWorkerDistribution {
  bytes run_id = 1 [(scalapb.field).type = "wvlet.airframe.ulid.ULID"];
  int32 test_id = 2 ;
  string image = 3;
  repeated string args = 4;
  bytes seed_artifact_archive = 5;
}
